# luna-soc

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
applets/selftest/: Makefile  README.md  platform.c  selftest.c  selftest.ld  start.S  start.c  top.py
docs/: Makefile  README.md  requirements.txt
docs/images/: eptri-block-diagram.d2  eptri-seq-out-transfer.d2
docs/images/eptri/: block-diagram.txt  registers-USB0.rst  registers-USB0_EP_CONTROL.rst  registers-USB0_EP_IN.rst  registers-USB0_EP_OUT.rst  seq-bulk-in-transfer.d2  seq-bulk-out-transfer.d2  seq-bus-reset.d2  seq-connect.d2  seq-control-in-transfer.d2  seq-control-out-transfer.d2
docs/source/: conf.py  eptri.rst  index.rst
docs/source/api_docs/: luna_soc.gateware.csr.rst  luna_soc.gateware.csr.usb2.interfaces.rst  luna_soc.gateware.csr.usb2.rst  luna_soc.gateware.rst  luna_soc.generate.rst  luna_soc.rst  luna_soc.util.rst  modules.rst
docs/source/datasheets/: eptri.rst
examples/: README.md
examples/hello-c/: Makefile  main.c  riscv_application.ld  top.py
examples/hello-rust/: Cargo.toml  Makefile  README.md  top.py
examples/hello-rust/.cargo/: config.toml  flash.sh
examples/hello-rust/firmware/: Cargo.toml
examples/hello-rust/firmware/.cargo/: config.toml
examples/hello-rust/firmware/src/: lib.rs  log.rs  main.rs
examples/hello-rust/lunasoc-pac/: Cargo.toml
examples/hello-rust/src/: lib.rs  log.rs  main.rs
luna_soc/: __init__.py  sim.py  top_level_cli.py
luna_soc/gateware/: __init__.py  lunasoc.py  soc.py
luna_soc/gateware/core/: __init__.py  advertiser.py  base.py  blockram.py  gpio.py  ila.py  memory.py  sram.py  timer.py  uart.py
luna_soc/gateware/core/spiflash/: __init__.py  controller.py  mmap.py
luna_soc/gateware/core/usb2/: device.py  ep_control.py  ep_in.py  ep_out.py  ulpi.py
luna_soc/gateware/core/usb2/interfaces/: __init__.py  eptri.py
luna_soc/gateware/cpu/: __init__.py  ic.py  minerva.py  vexriscv.py
luna_soc/gateware/cpu/verilog/: Makefile  README.md
luna_soc/gateware/cpu/verilog/vexriscv/: litex_bios.patch  vexriscv_cynthion.v  vexriscv_imac+dcache.v  vexriscv_imc.v
luna_soc/gateware/cpu/verilog/vexriscv/scala/src/main/scala/: GenCoreCynthion.scala
luna_soc/gateware/csr/: __init__.py  base.py  gpio.py  led.py  sram.py  uart.py
luna_soc/gateware/csr/usb2/: __init__.py  device.py
luna_soc/gateware/csr/usb2/interfaces/: eptri.py
luna_soc/gateware/provider/: cynthion.py
luna_soc/gateware/wishbone/: __init__.py  memory.py  qspi.py  sram.py
luna_soc/gateware/wishbone/spiflash/: __init__.py  master.py  mmap.py  port.py
luna_soc/generate/: __init__.py  c.py  genc.py  generate.py  genrust.py  gensvd.py  introspect.py  rust.py  svd.py
luna_soc/util/: readbin.py  sim.py
lunasoc-hal/: Cargo.toml
lunasoc-hal/.cargo/: config.toml
lunasoc-hal/src/: lib.rs  timer.rs
tb_cpp/: sim_soc.cpp
