[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]

name = "luna-soc"
authors = [
    {name = "Great Scott Gadgets", email = "dev@greatscottgadgets.com"},
]
description = "Amaranth HDL libary for building SoCs with LUNA USB peripherals."
readme = "README.md"
license = { text = "BSD" }
urls = { Source = "https://greatscottgadgets.com/cynthion" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB)",
]

dependencies = [
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc",
    "minerva @ git+https://github.com/minerva-cpu/minerva",
    "lambdasoc @ git+https://github.com/antoinevg/lambdasoc.git@antoinevg/support-vexriscv",
    "luna @ git+https://github.com/greatscottgadgets/luna@main",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
luna_soc = "luna_soc"

[tool.setuptools.package-data]
"luna_soc.gateware.cpu.verilog.vexriscv" = ["*.v"]

[tool.setuptools-git-versioning]
enabled = true
starting_version = "2023.06.26"