[package]
name = "firmware"
version = "0.0.1"
authors = ["Great Scott Gadgets <dev@greatscottgadgets.com>"]
license-file = "LICENSE.txt"
edition = "2021"

[dependencies]
log = "0.4.17"
panic-halt = "0.2.0"
riscv = { version="=0.10.1",  features=["critical-section-single-hart"] }
riscv-rt = "=0.11.0"

[dependencies.lunasoc-pac]
path = "../lunasoc-pac/"
default-features = false
features = ["critical-section", "vexriscv"]

[dependencies.lunasoc-hal]
version = "0.2"
default-features = false
features = ["vexriscv"]
