[package]
name = "firmware"
version = "0.0.1"
authors = ["Great Scott Gadgets <dev@greatscottgadgets.com>"]
license-file = "LICENSE.txt"
edition = "2021"

[dependencies]
log = "0.4.17"
riscv = { version = "=0.11.1", features = ["critical-section-single-hart"] }
riscv-rt = { version = "=0.12.2", features = ["single-hart"] }

[dependencies.lunasoc-pac]
path = "../lunasoc-pac/"
default-features = false
features = ["critical-section", "vexriscv"]

[dependencies.lunasoc-hal]
path = "../../../lunasoc-hal"
default-features = false
